--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,6 +1,6 @@
 ---
-title: Mental models for designers PART 2
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: Commencer à créer des nouvelles applications web dés maintenant 
+description: "."
 date: Sep 14 2021
 ---
 
